@@ -1,3 +1,7 @@
+2005-04-19  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-powerpc/reloc.d: Update to suit removal of non-alloc relocs.
+
 2005-03-24  Mark Mitchell  <mark@codesourcery.com>
 
 	* config/default.exp: Do not load libpath.exp if it does not
